# harbour-sailorAI

./: .gitignore  CLAUDE.md  README.md  harbour-sailorAI.desktop  harbour-sailorAI.pro
.github/workflows/: build-rpm.yml
api-abstraction-layer/: .gitignore  CLAUDE.md
api-abstraction-layer/config/: api_endpoints.json  schema.json
api-abstraction-layer/desktop_app/: AliasPage.qml  CMakeLists.txt  ChatPage.qml  Main.qml  SettingsPage.qml  StatusPage.qml  main.cpp  qml.qrc  test_config.js
api-abstraction-layer/examples/: basic_integration.js  custom_provider.json  migration_guide.md
api-abstraction-layer/tests/: README.md  run_tests.py  run_tests.sh
dbus/: harbour.harbour-sailorAI.service  harbour.sailorAI.service
qml/: harbour-sailorAI.qml
qml/components/: ProviderConfig.qml  RequestTimer.qml  SimpleDatabase.qml
qml/cover/: CoverPage.qml
qml/dialogs/: AddProviderAliasDialog.qml  AdvancedSettingsDialog.qml  ConversationDialog.qml  EditProviderAliasDialog.qml  ExportDialog.qml  FavoriteModelsDialog.qml  InfoDialog.qml  ModelListDialog.qml  ProviderAliasDialog.qml  RenameDialog.qml  ShareActionPage.qml  SourcesDialog.qml  TableViewDialog.qml  ToolLogDialog.qml
qml/js/: AliasManager.js  ApiAbstraction.js  DatabaseQueries.js  DateUtils.js  DebugLogger.js  EndpointBuilder.js  ExportFunctions.js  LLMApi.js  MarkdownRenderer.js
rpm/: harbour-datapass.changes.in  harbour-datapass.changes.run.in  harbour-sailorAI.spec  harbour-sailorAI.yaml
translations/: harbour-sailorAI-de.ts  harbour-sailorAI-fi.ts  harbour-sailorAI-fr.ts  harbour-sailorAI.ts
(+31 files in other folders)
